force-app/main/default/objects/Quote/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <formula>TEXT(Opportunity.Account.Customer_Type__c)</formula>
    <inlineHelpText>Associated account&apos;s customer type</inlineHelpText>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>