force-app/main/default/objects/Quote/fields/Discount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Approved</label>
    <type>Checkbox</type>
</CustomField>