force-app/main/default/objects/Quote/fields/Effective_Deal_Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Effective_Deal_Discount_Value__c</fullName>
    <description>Store discount used for approval process (Flow updated)</description>
    <label>Effective Deal Discount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>