force-app/main/default/objects/Quote/fields/Effective_Discount__c.field-meta.xml
<CustomField>
    <fullName>Effective_Discount__c</fullName>
    <formula>IF(Subtotal &gt; 0, ROUND((Subtotal - TotalPrice) / Subtotal, 2), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>