force-app/main/default/objects/Quote/fields/Has_Been_Approved__c.field-meta.xml
<CustomField>
    <fullName>Has_Been_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Approved</label>
    <type>Checkbox</type>
</CustomField>