force-app/main/default/objects/Quote/fields/Has_Been_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Has_Been_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Rejected</label>
    <type>Checkbox</type>
</CustomField>