force-app/main/default/objects/Quote/fields/Initial_Quote_Sent__c.field-meta.xml
<CustomField>
    <fullName>Initial_Quote_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if you have notified the client of the Initial Quote.</description>
    <inlineHelpText>Check if you have notified the client of the Initial Quote</inlineHelpText>
    <label>Initial Quote Sent</label>
    <type>Checkbox</type>
</CustomField>