force-app/main/default/objects/Quote/fields/Opportunity_Effective_Deal_Discount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Effective_Deal_Discount__c</fullName>
    <formula>Opportunity.Effective_Deal_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Effective Deal Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>