force-app/main/default/objects/Quote/fields/Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager__c</fullName>
    <formula>Owner:User.Manager.FirstName + &apos; &apos; + Owner:User.Manager.LastName</formula>
    <label>Owner Manager</label>
    <type>Text</type>
</CustomField>