force-app/main/default/objects/Quote/fields/Total_Discounted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discounted_Amount__c</fullName>
    <formula>Discount  *  Subtotal</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discounted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>