force-app/main/default/objects/Quote/fields/VAT_Formula__c.field-meta.xml
<CustomField>
    <fullName>VAT_Formula__c</fullName>
    <formula>0.2 *   TotalPrice</formula>
    <label>VAT Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>