force-app/main/default/objects/Quote/fields/VAT_Tax__c.field-meta.xml
<CustomField>
    <fullName>VAT_Tax__c</fullName>
    <formula>TotalPrice   * 0.20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>