force-app/main/default/objects/Quote/validationRules/Block_High_Discount_Without_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_High_Discount_Without_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Effective_Discount__c &gt; 0.10,
    OR(
        ISPICKVAL(Status, &quot;Accepted&quot;),
        ISPICKVAL(Status, &quot;Approved&quot;)
    ),
    Discount_Approved__c = FALSE
)</errorConditionFormula>
    <errorMessage>Cannot move Quote to Accepted. Approval required for discounts above 10%.</errorMessage>
</ValidationRule>