force-app/main/default/objects/Quote/validationRules/Quote_approved_before_setting_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_approved_before_setting_status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR(
    ISPICKVAL( Status , &quot;Approved&quot;),
    ISPICKVAL( Status, &quot;Accepted&quot;)
   ),
    NOT(ISPICKVAL( Approval_Status__c , &quot;Approved&quot;))
)</errorConditionFormula>
    <errorMessage>You cannot set the status of this quote to Approved or Accepted without the quote being approved.</errorMessage>
</ValidationRule>